--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,9 +56,16 @@ http {
 	# Virtual Host Configs
 	##
 
-    limit_req_zone $binary_remote_addr zone=flood:10m rate=5r/s;
-	limit_conn_zone $binary_remote_addr zone=perip:100m;
-	limit_req_status 429;
+	##
+	# Limit 443 port without server name
+	##
+	limit_req_zone $binary_remote_addr zone=flood443:10m rate=2r/s;
+	limit_conn_zone $binary_remote_addr zone=flood443:10m;
+
+    limit_req_zone $binary_remote_addr zone=floodurl:10m rate=10r/s;
+	limit_conn_zone $binary_remote_addr zone=floodurl:10m;
+	
+	limit_req_status 404;
 
 	map $http_user_agent $block_ua {
         default           0;
